@startuml

title __DMTP's Class Diagram__\n

  package Front {
    package Front.AprioriUI {
      class AprioriController {
      }
    }
  }
  

  package Algorithms.Apriori {
    class AprioriInstanceReader {
    }
  }
  

  package Algorithms.DBScan {
    class Cluster {
    }
  }
  

  package Front {
    class Controller {
    }
  }
  

  package Algorithms.DBScan {
    class DBSCANClusterer {
    }
  }
  

  package Front {
    package Front.DBSCAN {
      class DBSCANController {
      }
    }
  }
  

  package Processing {
    class DataCleaner {
    }
  }
  

  package Algorithms.Apriori {
    class InstanceApriori {
    }
  }
  

  package Algorithms.KNN {
    class KNNClassifier {
    }
  }
  

  package Front {
    package Front.KNN {
      class KNNController {
      }
    }
  }
  

  package Front {
    class Main {
    }
  }
  

  package Processing {
    class Plotter {
    }
  }
  

  package Algorithms.DBScan {
    class Point {
    }
  }
  

  package Algorithms.Apriori {
    class Searcher {
    }
  }
  

  package Processing {
    class StatisticsRetriever {
    }
  }
  

  AprioriController -up-|> Initializable
  AprioriController o-- InstanceApriori : currentIntance
  AprioriInstanceReader o-- InstanceApriori : instance
  Cluster -up-|> Comparable
  Controller -up-|> Initializable
  DBSCANController -up-|> Initializable
  DataCleaner o-- StatisticsRetriever : sr
  KNNController -up-|> Initializable
  Point -up-|> Comparable
  Searcher o-- InstanceApriori : instance


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
